--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "vendure-plugin-template",
-  "version": "1.0.0",
-  "description": "Plugin template",
-  "author": "Martijn van de Brug <martijn@pinelab.studio>",
-  "repository": "https://github.com/vendure-ecommerce/plugin-template",
+  "name": "vendure-plugin-firebase-auth",
+  "version": "0.1.0",
+  "description": "Allows users to authenticate with Firebase Auth to Shop-API",
+  "author": "ARRRRNY",
+  "repository": "https://github.com/arrrrny/vendure-firebase-auth-plugin",
   "license": "GPL-3.0-or-later",
   "private": false,
   "engines": {
@@ -20,6 +20,9 @@
     "start": "ts-node test/dev-server.ts",
     "build": "rimraf dist && tsc",
     "test": "vitest"
+  },
+  "dependencies": {
+    "firebase-admin": "^12.3.0"
   },
   "devDependencies": {
     "@swc/core": "^1.7.1",
